# genai-showcase

./: .coverage  .cursorignore  .dockerignore  .gitignore  Dockerfile  PRD.md  README.md  pyproject.toml  requirements.txt  version.py
.cursor/: .cursorrules  TASKS.md
.cursor/presets/: cursorignore.cloud  cursorignore.edge
api/: context.py  feedback.py  prompt.py
apps/cloud-rag/: README.md  main.py  pyproject.toml
apps/cloud-rag/api/: __init__.py  feedback.py  health.py  rag.py
apps/cloud-rag/config/: README.md  __init__.py  config.json  energy_efficiency_system_prompt.txt  relevance_evaluator_system_prompt.txt
apps/cloud-rag/config/templates/: config.nebius.json  config.openai.json
apps/cloud-rag/data/: db.sqlite
apps/cloud-rag/eval/: __init__.py  relevance_evaluator.py  run_eval.py
apps/cloud-rag/eval/data/: golden.jsonl
apps/cloud-rag/faiss_index/: chunks.jsonl  index.faiss  index.pkl  manifest.json
apps/cloud-rag/providers/: __init__.py  embeddings.py  factory.py  langfuse.py  nebius_embeddings.py  nebius_llm.py  openai_embeddings.py  openai_llm.py
apps/cloud-rag/rag/: chain.py
apps/cloud-rag/rag/data/seed/: health_nutrition_basics.txt  health_physical_activity.txt  health_sleep_hygiene.txt  hvac_maintenance.txt  insulation_air_sealing.txt  lighting_led.txt  standby_power.txt  standby_power_tips.txt  thermostat_scheduling.txt
apps/cloud-rag/schemas/: __init__.py  energy_efficiency.py
apps/cloud-rag/scripts/: __init__.py  seed_index.py  switch_provider.py
apps/cloud-rag/services/: eval_queue.py  eval_queue_processor.py  feedback_store.py
apps/cloud-rag/tests/: conftest.py  test_feedback_sync.py  test_providers_init.py  test_rag_api.py  test_relevance_evaluator.py  test_templates_shape.py
apps/edge-server/: README.md  main.py  pyproject.toml
apps/edge-server/api/: prompt.py
apps/edge-server/config/: README.md  classification_system_prompt.txt  config.json  config.md  device_control_system_prompt.txt  energy_efficiency_system_prompt.txt  logging_config.py
apps/edge-server/config/templates/: edge_nebius.json  edge_openai.json
apps/edge-server/core/: __init__.py  classifier.py  orchestrator.py
apps/edge-server/llm_cloud/: provider.py
apps/edge-server/llm_cloud/tools/: __init__.py
apps/edge-server/monitoring/: __init__.py  metrics.py
apps/edge-server/pipelines/: __init__.py  base.py
apps/edge-server/pipelines/device_control/: __init__.py  pipeline_device_control.py
apps/edge-server/pipelines/device_control/tools/: __init__.py
apps/edge-server/pipelines/energy_efficiency/: pipeline_energy_efficiency.py
apps/edge-server/scripts/: switch_provider.py
apps/edge-server/services/: feedback_manager.py  feedback_scheduler.py  feedback_sync.py  history_manager.py
apps/edge-server/shared/: __init__.py  feedback_client.py  models.py  rag_client.py  utils.py
apps/edge-server/tests/: test_edge_cloud_fallback.py  test_edge_flag_off.py  test_provider_init.py  test_templates_shape.py
apps/edge-server/tests/api/: test_feedback.py  test_prompt.py
apps/edge-server/tests/core/: test_orchestrator.py
apps/edge-server/tests/services/: test_history_manager.py
apps/gradio/: README.md  pyproject.toml
apps/gradio/chat/: app.py  edge_chat.py
apps/gradio/config/: config.json
apps/gradio/rag_explorer/: app.py  rag_explorer.py
apps/gradio/shared/: config.py
config/: __init__.py  classification_system_prompt.txt  other_queries_response.txt
infra/compose/: README.md  docker-compose.yml  generate_env.py
llm_cloud/: __init__.py  provider.py
llm_cloud/tools/: core.py  handlers.py
pipelines/device_control/: pipeline_device_control.py
pipelines/device_control/tools/: device_tools.py
pipelines/energy_efficiency/: __init__.py  pipeline_energy_efficiency.py
provider_api/: __init__.py  base.py  mock_client.py
services/: daily_digest.py  history_manager.py
shared/: utils.py
tests/: conftest.py
tests/api/: test_context.py
tests/core/: test_classifier.py
tests/pipelines/: test_energy_efficiency_pipeline.py
tests/services/: test_history_manager.py
