[project]
name = "ai-assistant-energy-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikhail Dubovichev",email = "mikhail.dubovichev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "openai (>=1.99.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=0.19.0)",
    "dateparser (>=1.2.2,<2.0.0)",
    "prometheus-client (==0.19.0)",
    "pydantic (>=2.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

