[project]
# -----------------------------------------------------------------------------
# Project metadata (PEP 621 style)
# - This app is NOT intended to be published as a library; we enable Poetry's
#   dependency-only mode below to avoid packaging errors.
# - Keep the Python constraint explicit to satisfy provider packages
#   (e.g., langchain-nebius requires <4.0 and works well on 3.11).
# -----------------------------------------------------------------------------
name = "cloud-rag"
version = "0.1.0"
description = "Cloud Retrieval-Augmented Generation (RAG) service"
authors = [
    { name = "Mikhail Dubovichev", email = "mikhail.dubovichev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.15"

# Dependencies can be managed with `poetry add ...` and will be written here by Poetry.
dependencies = [
  "langchain (>=0.3.27,<0.4.0)",
  "langchain-community (>=0.3.27,<0.4.0)",
  "langchain-core (>=0.3.74,<0.4.0)",
  "faiss-cpu (>=1.12.0,<2.0.0)",
  "fastapi (>=0.116.1,<0.117.0)",
  "uvicorn (>=0.35.0,<0.36.0)",
  "pydantic (>=2.11.7,<3.0.0)",
  "langfuse (>=3.2.8,<4.0.0)",
  # Providers (installed regardless; selection is controlled by CONFIG)
  "langchain-nebius (>=0.1.3,<0.2.0)",
  "langchain-openai (>=0.3.5,<0.4.0)",
  "openai (>=1.0.0,<2.0.0)"
]

[tool.poetry]
# -----------------------------------------------------------------------------
# Poetry-specific options
# - package-mode = false → dependency-only workflow (no packaging step). This
#   mirrors the edge-server simplicity and avoids "no package" errors.
# -----------------------------------------------------------------------------
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
