[tool.poetry]
name = "genai-gradio"
version = "0.1.0"
description = "Gradio UIs for the GenAI Showcase (edge chat, RAG explorer)."
authors = ["Mikhail Dubovichev <mikhail.dubovichev@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
gradio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
